clusters/main/kubernetes/flux-system/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
    - host: capacitor.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
  tls:
    - hosts:
      - capacitor.${DOMAIN}
      secretName: capacitor-tls-0
